--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Protocol Buffers RPC Server Implemention based on Tapestry(5.1.0.4) ,Mina(2.0-M5) and Protobuf(2.0.3)
+Protocol Buffers RPC Server Implemention based on Tapestry(5.1.0.5) ,Mina(2.0.0-RC1) and Protobuf(2.1.0)
 == Usage ==
 
 ses RpcApplicationTest.java
